--- a/portfolio/templates/projects.html
+++ b/portfolio/templates/projects.html
@@ -4,7 +4,7 @@
     <h1 class="mt-2 text-center">Projects</h1>
     <div class="mt-5 container" id="portfolio-container">
         <div class="mt-3 row">
-            {% for project in projects %}
+            {% for project in project_list %}
             <div class="card mb-3 mx-auto" style="width: 60rem; border-radius: 10px;">
                 <div class="card-body">
                     <h3 class="card-title">{{project.title}}</h3>
