added BlogList to blog app

--- a/portfolio/templates/projects.html
+++ b/portfolio/templates/projects.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="col-sm-6 ">
                             {% if project.is_on_blog %}
-                            <a href={{project.blog_link}} style="color:inherit;"><i class="ml-4 float-right fas fa-angle-double-right fa-2x"></i></a>
+                            <a href={{project.blog_link}} style="color:inherit;"><i class="ml-4 float-right fas fa-angle-right fa-2x"></i></a>
                             {% endif %}
                             {% if project.is_on_github %}
                             <a href={{project.github_link}} style="color:inherit;"><i class="float-right fab fa-github fa-2x"></i></a>
