--- a/templates/base.html
+++ b/templates/base.html
@@ -30,4 +30,29 @@
     {% endblock %}
 </body>
 
+<footer class="page-footer font-small pt-5">
+    <div class="d-flex justify-content-center" style="border-top: 1px solid lightgray;">
+        <div class="col pt-5">
+            <div class="mb-4">
+                <a class="tw-ic">
+                    <i class="fab fa-twitter fa-lg mr-5 fa-2x"> </i>
+                </a>
+                <a class="li-ic">
+                    <i class="fab fa-linkedin-in fa-lg mr-5 fa-2x"> </i>
+                </a>
+                <a class="ins-ic">
+                    <i class="fab fa-github-square fa-lg mr-5 fa-2x"> </i>
+                </a>
+                <a class="pin-ic">
+                    <i class="fas fa-envelope fa-lg fa-2x"> </i>
+                </a>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div class="text-center mb-2">
+        Made with <i class="fa fa-heart pulse" style="color: #E90606;"></i> in <b>Vancouver</b>
+    </div>
+</footer>
+
 </html>
