--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 
@@ -9,13 +10,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
+    <!-- FontAwesome -->
     <script src="https://kit.fontawesome.com/440c024ef4.js" crossorigin="anonymous"></script>
 
+     <!-- Typewriter Effects -->
+    <script src="{% static 'javascript/typewriter.js' %}"></script>
+    
     <title>Hello, world!</title>
 
     <nav class="navbar navbar-light bg-light">
         <a class="navbar-brand" href="#">
-            <img src="logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="{% static 'images/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Hi, I'm Mert.
         </a>
     </nav>
@@ -27,24 +32,19 @@
 </body>
 
 <footer class="page-footer font-small pt-5">
-    <div class="d-flex justify-content-center" style="border-top: 1px solid lightgray;">
-        <div class="col pt-5">
-            <div class="mb-4">
-                <a>
-                    <i class="fab fa-twitter fa-lg mr-5 fa-2x"> </i>
-                </a>
-                <a>
-                    <i class="fab fa-linkedin-in fa-lg mr-5 fa-2x"> </i>
-                </a>
-                <a>
-                    <i class="fab fa-github-square fa-lg mr-5 fa-2x"> </i>
-                </a>
-                <a>
-                    <i class="fas fa-envelope fa-lg fa-2x"> </i>
-                </a>
-            </div>
-        </div>
-    </div>
+    <div class="d-flex justify-content-center pt-4 mb-4" style="border-top: 1px solid lightgray;">
+        <a href="https://twitter.com/barutcuoglumert">
+            <i class="fab fa-twitter fa-lg mr-5 fa-2x"> </i>
+        </a>
+        <a href="https://www.linkedin.com/in/kadir-mert-barutçuoğlu-634055bb/">
+            <i class="fab fa-linkedin-in fa-lg mr-5 fa-2x"> </i>
+        </a>
+        <a href="http://github.com/mertbarutcuoglu">
+            <i class="fab fa-github-square fa-lg mr-5 fa-2x"> </i>
+        </a>
+        <a href="mailto:kbarutcu@students.cs.ubc.ca">
+        <i class="fas fa-envelope fa-lg fa-2x"> </i>
+        </a>
     </div>
     <div class="text-center mb-2">
         Made with <i class="fa fa-heart pulse" style="color: #E90606;"></i> in <b>Vancouver</b>
