added view for blog post

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
     <title>Hello, world!</title>
 </head>
 <header>
-    <nav class="navbar navbar-light bg-white">
+    <nav class="navbar navbar-light bg-white shadow-sm">
         <a class="navbar-brand" href="#">
             <img src="{% static 'images/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Hi, I'm Mert.
@@ -32,6 +32,7 @@
 </header>
 
 <body>
+
     {% block content %}
     {% endblock %}
 
