--- a/blog/templates/blog.html
+++ b/blog/templates/blog.html
@@ -1,7 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1 class="mt-2 text-center">Blog</h1>
+<div>
+    <h1 class="mt-2 text-center">Blog</h1>
+</div>
 <div class="mt-3 container">
     {% for post in post_list %}
     <div class="container mb-3 mx-auto" style="width: 60rem;">
@@ -16,7 +18,7 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <a href="">
+                    <a href="{% url 'post' post.slug  %}">
                         <h2>
                             {{post.title}}
                         </h2>
@@ -30,4 +32,4 @@
     </div>
     {% endfor %}
 </div>
-    {% endblock %}
+{% endblock %}
