minor changes in UI

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -30,7 +30,7 @@
                     <img src="{{section.image.url}}" class="card-img-top" width="352" height="198" alt="...">
                     <div class="card-body">
                         <a href="{{section.links_to}}">
-                            <h5 class="card-title">{{section.title}}&#{{section.section_emoji}};</h5>
+                            <h5 class="card-title">&#{{section.section_emoji}};{{section.title}}</h5>
                         </a>
                         <p class="card-text">{{section.description}}</p>
                     </div>
