--- a/templates/base.html
+++ b/templates/base.html
@@ -38,16 +38,16 @@
 
     <footer class="font-small pt-5">
         <div class="d-flex justify-content-center pt-4 mb-3" style="border-top: 1px solid lightgray;">
-            <a href="https://twitter.com/barutcuoglumert">
+            <a href="https://twitter.com/barutcuoglumert" style="color:inherit;">
                 <i class="fab fa-twitter fa-lg mr-5 fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/in/kadir-mert-barutçuoğlu-634055bb/">
+            <a href="https://www.linkedin.com/in/kadir-mert-barutçuoğlu-634055bb/" style="color:inherit;">
                 <i class="fab fa-linkedin-in fa-lg mr-5 fa-2x"> </i>
             </a>
-            <a href="http://github.com/mertbarutcuoglu">
+            <a href="http://github.com/mertbarutcuoglu" style="color:inherit;">
                 <i class="fab fa-github-square fa-lg mr-5 fa-2x"> </i>
             </a>
-            <a href="mailto:kbarutcu@students.cs.ubc.ca">
+            <a href="mailto:kbarutcu@students.cs.ubc.ca" style="color:inherit;">
                 <i class="fas fa-envelope fa-lg fa-2x"> </i>
             </a>
         </div>
