fixed rendering issue in blog posts

--- a/blog/templates/post.html
+++ b/blog/templates/post.html
@@ -10,7 +10,7 @@
     </div>
     <div class="container">
         <p style="line-height: 1.8;">
-            {{object.content}}
+            {{object.content | safe}}
         </p>
     </div>
 </div>
