added spacing to bio

--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="py-5 row">
             <blockquote class="blockquote" style="border-left: 3px solid rgb(55, 53, 47);">
-                <p class="px-4">{{summary | safe}}</p>
+                <div class="px-4">{{summary | safe}}</div>
             </blockquote>
         </div>
     </div>
