--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
     <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
 
 
-    <title>Hello, world!</title>
+    <title>Hi, I'm Mert!</title>
 </head>
 <header>
     <nav class="navbar navbar-light bg-white shadow-sm">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="https://mertbarutcuoglu.tech">
             <img src="{% static 'images/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Hi, I'm Mert.
         </a>
@@ -41,7 +41,7 @@
             <a href="https://twitter.com/barutcuoglumert" style="color:inherit;">
                 <i class="fab fa-twitter fa-lg mr-5 fa-2x"></i>
             </a>
-            <a href="https://www.linkedin.com/in/kadir-mert-barutçuoğlu-634055bb/" style="color:inherit;">
+            <a href="https://www.linkedin.com/in/kadirmertbarutcuoglu/" style="color:inherit;">
                 <i class="fab fa-linkedin-in fa-lg mr-5 fa-2x"> </i>
             </a>
             <a href="http://github.com/mertbarutcuoglu" style="color:inherit;">
