--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
 </head>
 <header>
     <nav class="navbar navbar-light bg-white shadow-sm">
-        <a class="navbar-brand" href="http://mertbarutcuoglu.tech/">
+        <a class="navbar-brand" href="www.mertbarutcuoglu.tech/">
             <img src="{% static 'images/logo.png' %}" width="30" height="30" class="d-inline-block align-top" alt="">
             Hi, I'm Mert.
         </a>
