--- a/homepage/templates/index.html
+++ b/homepage/templates/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <div class="mt-5 container" id="menu-container" style="border-top: 2px solid lightgray;">
-        <div class="mt-3 row">
+        <div class="mt-3 row justify-content-center">
             {% for section in sections %}
             <div class="col-sm-4">
                 <div class="card" style="height:290px; width: 352px;">
